[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.4"
yew = "0.18.0"
gloo-console = "0.2.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "HtmlInputElement",
]
